[tool.poetry]
name = "kaggle-learning"
version = "0.1.0"
description = "Learning from kaggle courses"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
kaggle = "^1.5.12"
pandas = "^1.4.2"
numpy = "^1.22.4"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
pyflakes = "^2.4.0"
jupyterlab = "^3.4.3"
pytest = "^7.1.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
